--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <button class="navbutton" id="navButton"><span class="navbutton__line"></span><span class="navbutton__line"></span><span class="navbutton__line"></span></button>
       </div>
     </header>
-    <nav class="nav" id="nav" style="display:none">
+    <!-- <nav class="nav" id="nav" style="display:none">
       <ul class="nav__list">
         <li class="nav__item"><a class="nav__link" href="#">Link1</a></li>
         <li class="nav__item"><a class="nav__link" href="#">Link3</a></li>
         <li class="nav__item"><a class="nav__link" href="#">Link5</a></li>
       </ul>
-    </nav>
+    </nav> -->
     <section class="banner">
       <div class="container banner__container">
         <div class="banner__content">
@@ -30,12 +30,15 @@
     </section>
     <section class="section profile">
       <div class="container profile__container">
-        <h2 class="title"><span class="strong">Hey, I`m <span class="main-color">Tanya</span>.</span><br/><span>My Journey Starts.</span></h2>
-        <p class="text">I’ve been freelancing for over four years now. I create turn-key ready business card websites, landing pages, and small online stores. I also have an outsource based collaboration with Garin Studio. </p>
+        <h2 class="title"><span class="strong">Привіт, я <span class="main-color">Таня</span>.</span><br/><span>My Journey Starts.</span></h2>
+        <p class="text">Мій досвід у сфері розробки вебсторінок складає понад 4 роки. Чотири роки я ретельно працюю над навичками веб програмування, створюю вебсайти, готові візитні картки під ключ, цільові сторінки та невеликі інтернет-магазини.</p>
+        
         <div class="profile__image boximage"><img class="profile__img" src="src/images/photo1.jpg" alt="Tatiana Naumenko"/></div>
         <div class="profile__block">
-          <p class="text"> I love creating perfect interfaces and solving logical tasks. I felt an urge to share the knowledge as I acquired sufficient experience.</p>
-          <p class="text">I enjoy multisport, so in my free time, I run, cycle, do some rock climbing, and canoeing. My mottoes are ‘nothing is impossible’ and ‘life is a movement.’ So never stop on the way to your future in IT, you can do it.</p><a class="action profile__action" href="#">// Learn more</a>
+          <p class="text">Мені подобаються цікаві та складні завдання: створювання ідеальних інтерфейсів, вирішування логічних завдань. Я відчуваю бажання поділитися знаннями, коли набуваю достатнього досвіду. Тому один з напрямків моєї роботи - викладацька діяльність.</p>
+        <p class="text">Головне для мене - задоволення замовника від моєї праці. </p>
+        <p class="text">Моє гасло —  «неможливе - можливо» і «життя - це рух» </p>
+        <a class="action profile__action" href="#">// Learn more</a>
           <div class="colorbox profile__box">
             <ul>
               <li><a class="colorbox__link" href="#"> <span class="arrow">
@@ -90,12 +93,12 @@
         <h2 class="title strong">My portfolio<span class="color">.</span></h2>
         <div class="projects">
           <div class="projects__item">
-            <div class="projects__content"><a class="projects__image" href="#"><img class="projects__img" src="https://cdn.bolvo.com/mashura/images/gallery/1.jpg" alt="project1"/></a>
+            <div class="projects__content"><a class="projects__image" href="#"><img class="projects__img" src="src/images/portfolio/nacheku_collage.jpg" alt="project1"/></a>
               <div class="projects__name">\\ THE MOCKUP</div><a class="projects__title" href="#">iPhone XS With Shadow</a>
             </div>
           </div>
           <div class="projects__item">
-            <div class="projects__content"><a class="projects__image" href="#"><img class="projects__img" src="https://cdn.bolvo.com/mashura/images/gallery/2.jpg" alt="project2"/></a>
+            <div class="projects__content"><a class="projects__image" href="#"><img class="projects__img" src="src/images/portfolio/atlbank_preview.jpg" alt="project2"/></a>
               <div class="projects__name">\\ PHOTOGRAPHY</div><a class="projects__title" href="#">Business Cards</a>
             </div>
           </div>
